# tomlplusplus

./: .gitmodules  CONTRIBUTING.md  classtoml_1_1array.html  classtoml_1_1node.html  classtoml_1_1node__view.html  classtoml_1_1parse__result.html  classtoml_1_1table.html  classtoml_1_1value.html  index.html  meson.build  meson_options.txt  namespacetoml.html  searchdata-v2.js  structtoml_1_1source__position.html  toml++.props  toml++.tagfile.xml
.github/workflows/: ci.yaml
cmake/: tomlplusplus.cmake.in  tomlplusplusConfig.cmake.meson.in  tomlplusplusConfigVersion.cmake
include/: meson.build
lib/: meson.build
lib/toml++/: toml.cpp
tests/: lib_catch2.h  lib_tloptional.h  meson.build
toml-test/: README.md  tt.h
tools/: generate_conformance_tests.py
